Resolve book card layout problem with test objects

--- a/styles.css
+++ b/styles.css
@@ -29,6 +29,9 @@
 .main-content {
   grid-area: 2 / 1 / 3 / 2;
   padding: 20px 32px;
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
 }
 
 .registration {
@@ -88,8 +91,11 @@ h2 {
 
 /* styling for book card */
 .bookshelf {
+  flex: 1;
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(160px, 1fr));
+  grid-template-rows: repeat(1, 160px);
+  grid-auto-rows: 160px;
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
   gap: 16px;
 }
 
@@ -99,39 +105,53 @@ h2 {
   background-color: white;
   box-shadow: 2px 2px 6px 2px hsl(0, 2%, 18%, 0.3);
   display: grid;
-  grid-template: 32px 24px 40px / 64px 64px;
+  grid-template-rows: 2fr 1fr 1fr;
+  grid-template-columns: 64px 1fr;
   gap: 12px;
   padding: 12px 16px;
+  align-items: center;
 }
 
 .book.title {
   grid-area: 1 / 1 / 2 / 3;
-  font-size: 1.3rem;
+  font-size: 1.2rem;
   font-weight: bold;
+  color: hsl(0, 2%, 9%);
 }
 
 .book.author {
   grid-area: 2 / 1 / 3 / 3;
   font-size: 1.1rem;
   font-weight: medium;
-  color: gray;
+  color: darkslategray;
 }
 
 .book.pages {
   grid-area: 3 / 1 / 4 / 2;
   font-size: 1rem;
   font-weight: medium;
-  border: 1px solid whitesmoke;
+  border: 1px solid gray;
   border-radius: 4px;
-  color: gray;
+  color: hsl(0, 2%, 9%);
+  background-color: darkgray;
+  padding: 4px 8px;
+  display: grid;
+  grid-template: 1fr / 1fr;
+  justify-self: center;
+  align-self: center;
 }
 
 .book.read {
   grid-area: 3 / 2 / 4 / 3;
   font-size: 1rem;
   font-weight: medium;
-  border: 1px solid gray;
+  border: 1px solid lightskyblue;
   border-radius: 4px;
-  color: white;
+  color: hsl(0, 2%, 9%);
   background-color: lightblue;
+  padding: 4px 8px;
+  display: grid;
+  grid-template: 1fr / 1fr;
+  justify-self: center;
+  align-self: center;
 }
